--- a/Pinch.html
+++ b/Pinch.html
@@ -13,51 +13,57 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<header>
-	<div class="container">
-		<div class="row">
-			<div class="column col-md-6 col-lg-7">
-		<a href="index.html"><img src="IMG/Logo.svg" alt="Marcelle Khalil" class="logo"></a>
+<body>
+	<header>
+		<div class="container">
+			<div class="row">
+				<div class="column col-md-6 col-lg-7">
+			<a href="index.html"><img src="IMG/Logo2.png" alt="Marcelle Khalil" class="logo"></a>
+		</div>
+			<nav class="column col-md-6 col-lg-5">
+				<ul class="topbottombordersout">
+					<li><a href="index.html" target="_self">Work</a></li>
+					<li><a href="about.html" target="_self">About</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
+		</div>
 	</div>
-		<nav class="column col-md-6 col-lg-5">
-			<ul>
-				<li><a href="index.html" target="_self">Work</a></li>
-				<li><a href="about.html" target="_self">About</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
-	</div>
-</header>
-<main>
+	</header>
+	<main>
+		<br>
 			<div id="project">
-				<h1>Pinch</h1>
+				<h1 class="center">Pinch</h1>
 			</div>
-			<div id="hero">
+			<br>
+			<div>
 				<picture>
 					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Pinch_iphones_Khalil@600px.jpg" media="(max-width:767px)">
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_iphone_prototype@1200px.jpg" alt="Pinch Iphone Image">
 				</picture>
 			</div>
+			<br>
 			<!--Introduction/ Background-->
 			<div id="project">
-				<h3>Introduction</h3>
+				<h3 class="center">Introduction</h3>
 				<p>
 					Pinch is a mobile application that helps people take control of their finances. The main goal was to create an applicationthat people from all financial background can easily navigate and use. Everything from account balances to credit
 					scores
 					are all located in one place.
 				</p>
 			</div>
+			<br>
 			<!--My Process-->
 			<div>
-				<h2>My Process</h2>
 				<picture>
 					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/pinch_desktop_mockup@600-2.jpg" media="(max-width:767px)">
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_desktop_mockup@1200-2.jpg" alt="Pinch Desktop Image">
 				</picture>
 			</div>
+			<br>
 			<!--Research-->
 			<div>
-				<h3>Research</h3>
+				<h3 class="center">Research</h3>
 				<p>
 					By conducting extensive research into the potential competitor's of Pinch and performal several user interviews, I was able to better understand the market for money-saving and banking applications. The interview was made up of the
 					following
@@ -74,14 +80,16 @@
 				<p>
 					The interviews revealed that users wanted a simple way to set up financial goals and to take control of their savings.
 				</p>
+				<br>
 				<picture>
 					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/competitor_analysis_pinch@600.jpg" media="(max-width:767px)">
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/competitor_analysis_pinc@1200.jpg" alt="Competitor Analysis Image">
 				</picture>
 			</div>
+			<br>
 			<!--Ideation-->
 			<div>
-				<h3>Ideation</h3>
+				<h3 class="center">Ideation</h3>
 				<p>
 					The data collected during the interview process allowed me to create six user stories and user flows which actions a user would take to accomplish a desired task. The user stories were divided into new customers and returning customers.
 					Sucess criteria were created based off of the user stories.
@@ -95,14 +103,16 @@
 					<li>"As a returning customer, I want to be able to review previous conversations from financial advisors." Success Criteria 5: Summary reports from financial advisors</li>
 					<li>"As a returning customer, I want to be able to create and view all of my financial goals." Success Criteria 6: Create and view financial goals</li>
 				</ul>
+				<br>
 				<picture>
 					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/User_Flow_Pinch@600-2.jpg" media="(max-width:767px)">
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/User_Flow_Pinch_Desktop-2.jpg" alt="User Flow">
 				</picture>
 			</div>
+			<br>
 			<!--Wireframe-->
 			<div>
-				<h3>Wireframe</h3>
+				<h3 class="center">Wireframe</h3>
 				<p>
 					After the research and ideation phase, I developed low-fidelity wireframes both by hand and using Balsamiq. The wireframes were created with the user stories in mind.
 				</p>
@@ -111,25 +121,29 @@
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Low-Fidelity-Wireframes@1200.jpg" alt="Balsamiq Image">
 				</picture>
 			</div>
+			<br>
 			<!--Design-->
 			<div>
-				<h3>Design</h3>
+				<h3 class="center">Design</h3>
 				<p>
 					Due to the personal and important nature of this application, the design was made to look clean, simple, and professional. One of the emotional design concepts I applied was to refer to the psychology of color and chose a hue that would be
 					most suitable to the app. I chose dark blue because it symbolizes trust, loyalty, and wisdom, all of which are ideal to a money-saving application.
 				</p>
+				<br>
 				<picture>
 					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Pinch_UI_Designs@600.jpg" media="(max-width:767px)">
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Pinch_UI_Designs@1200.jpg" alt="Pinch Designs Image">
 				</picture>
+				<br>
 				<picture>
 					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/brand_guidelines_pinch@600.jpg" media="(max-width:767px)">
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/brand_guidelines_pinch@1200.jpg" alt="Brand Guidelines Image">
 				</picture>
 			</div>
+
 			<!--Prototype-->
 			<div>
-				<h3>Prototype</h3>
+				<h3 class="center">Prototype</h3>
 				<p>
 					I created a UseBerry scenario-based test to gain insight into user behaviors, such as click time and heatmap analysis. In addition, I conducted face-to-face tests through InVision Prototype to collect more data on user difficulty in
 					completing the tasks. Users were asked to complete the following tasks in both tests"
@@ -146,11 +160,13 @@
 					frustration. 100% of users were able to find the expenses page in under 10 seconds, while 80% of the users were able to find the goals page. All of those who did not drop off were able to find the accounts page and download a PDF from the
 					reports page.
 				</p>
+				<br>
 				<picture>
 					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/graph_image@600.jpg" media="(max-width:767px)">
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/graph_pinch2@1200.jpg" alt="U
 				ser Testing Grapg Image">
 				</picture>
+				<br>
 				<picture>
 					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Pinch_results@600.jpg" media="(max-width:767px)">
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Pinch_results@1200.jpg" alt="User testing Image">
@@ -160,9 +176,10 @@
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/heatmap_pinch@1200.jpg" alt="Heatmap ANalysis Image">
 				</picture>
 			</div>
+			<br>
 			<!--Conclusion-->
 			<div>
-				<h3>Conclusion</h3>
+				<h3 class="center">Conclusion</h3>
 				<p>
 					Although the first prototype showed that the majority of the users were able to navigate through the app successfully, it also revealed some problems. Based off of the data received from user testing, I have made a variety of changes to the
 					icons and labels, which I am hoping will solve these issues. I also created an additional screen showing users how to slide the home screen buttons. The next step would be to conduct additional user testing to see if these changes have
@@ -174,15 +191,23 @@
 		<footer id="contact">
 			<div class="container">
 				<h2 class="center">Get In Touch</h2>
+				<div class="spacer">
 				<p class="center">Want to discuss opportunities? Feel free to get in touch.</p>
+				</div>
 			</div>
-			<div class="center">
+
+	<div class="container">
+		<div class="center">
+			<div class="spacer">
 				<a href="mailto:marcellemkhalil@gmail.com" class="button contact">Email Me</a>
+	</div>
 			</div>
+		</div>
 			<!--social media icons-->
 			<div class="container">
 				<div class="row">
 					<div class="center">
+						<div class="zoom">
 						<a href="https://www.linkedin.com/in/marcelle-khalil-hein-84828b70/" target="blank">
 							<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M69.6875 78.4375H10.3125C5.48 78.4375 1.5625 74.52 1.5625 69.6875V10.3125C1.5625 5.48 5.48 1.5625 10.3125 1.5625H69.6875C74.52 1.5625 78.4375 5.48 78.4375 10.3125V69.6875C78.4375 74.52 74.52 78.4375 69.6875 78.4375Z"
@@ -191,8 +216,7 @@
 									d="M63.2666 33.8685C61.3555 31.675 58.7089 30.5783 55.3275 30.5783C52.8259 30.5783 50.7052 31.075 48.9642 32.068C47.2233 33.0614 45.5022 34.7147 43.8016 37.0278V31.3641H32.4258V66.1325H43.7177V46.4158C43.7177 42.9625 46.2956 40.1136 49.5838 39.9331L49.9822 39.9113C52.9753 39.7471 55.488 42.248 55.488 45.3914V66.1324H66.133V44.0338C66.1328 39.4503 65.1772 36.0621 63.2666 33.8685Z"
 									fill="white" />
 								<path d="M25.918 31.3641H14.5422V66.1328H25.918V31.3641Z" fill="white" />
-								<path d="M20.2313 26.5949C23.7458 26.5949 26.5949 23.7458 26.5949 20.2313C26.5949 16.7168 23.7458 13.8677 20.2313 13.8677C16.7168 13.8677 13.8677 16.7168 13.8677 20.2313C13.8677 23.7458 16.7168 26.5949 20.2313 26.5949Z"
-									fill="white" />
+								<path d="M20.2313 26.5949C23.7458 26.5949 26.5949 23.7458 26.5949 20.2313C26.5949 16.7168 23.7458 13.8677 20.2313 13.8677C16.7168 13.8677 13.8677 16.7168 13.8677 20.2313C13.8677 23.7458 16.7168 26.5949 20.2313 26.5949Z" fill="white" />
 								<path
 									d="M69.6875 80H10.3125C4.62609 80 0 75.3739 0 69.6875V10.3125C0 4.62609 4.62609 0 10.3125 0H69.6875C75.3739 0 80 4.62609 80 10.3125V69.6875C80 75.3739 75.3739 80 69.6875 80ZM10.3125 3.125C6.34937 3.125 3.125 6.34937 3.125 10.3125V69.6875C3.125 73.6506 6.34937 76.875 10.3125 76.875H69.6875C73.6506 76.875 76.875 73.6506 76.875 69.6875V10.3125C76.875 6.34937 73.6506 3.125 69.6875 3.125H10.3125Z"
 									fill="black" />
@@ -212,13 +236,13 @@
 								<path d="M40.8992 10.625H40.8806C40.0178 10.625 39.3181 9.92547 39.3181 9.0625C39.3181 8.19953 40.0178 7.5 40.8806 7.5H40.8992C41.762 7.5 42.4617 8.19953 42.4617 9.0625C42.4617 9.92547 41.762 10.625 40.8992 10.625Z" fill="black" />
 							</svg>
 						</a>
+					</div>
+					<div class="zoom">
 						<a href="https://www.behance.net/marcellekhalil" target="blank">
 							<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path
-									d="M78.4375 7.8125V72.1875C78.4375 75.639 75.639 78.4375 72.1875 78.4375H7.8125C4.36096 78.4375 1.5625 75.639 1.5625 72.1875V7.8125C1.5625 4.36096 4.36096 1.5625 7.8125 1.5625H72.1875C75.639 1.5625 78.4375 4.36096 78.4375 7.8125Z"
+								<path d="M78.4375 7.8125V72.1875C78.4375 75.639 75.639 78.4375 72.1875 78.4375H7.8125C4.36096 78.4375 1.5625 75.639 1.5625 72.1875V7.8125C1.5625 4.36096 4.36096 1.5625 7.8125 1.5625H72.1875C75.639 1.5625 78.4375 4.36096 78.4375 7.8125Z"
 									fill="#059BE6" />
-								<path d="M21.25 9.84375H52.5C53.363 9.84375 54.0625 9.14429 54.0625 8.28125C54.0625 7.41821 53.363 6.71875 52.5 6.71875H21.25C20.387 6.71875 19.6875 7.41821 19.6875 8.28125C19.6875 9.14429 20.387 9.84375 21.25 9.84375Z"
-									fill="black" />
+								<path d="M21.25 9.84375H52.5C53.363 9.84375 54.0625 9.14429 54.0625 8.28125C54.0625 7.41821 53.363 6.71875 52.5 6.71875H21.25C20.387 6.71875 19.6875 7.41821 19.6875 8.28125C19.6875 9.14429 20.387 9.84375 21.25 9.84375Z" fill="black" />
 								<path d="M60.3125 8.28125C60.3125 9.14429 59.613 9.84375 58.75 9.84375C57.887 9.84375 57.1875 9.14429 57.1875 8.28125C57.1875 7.41821 57.887 6.71875 58.75 6.71875C59.613 6.71875 60.3125 7.41821 60.3125 8.28125Z" fill="black" />
 								<path
 									d="M72.1875 0H7.8125C3.50464 0 0 3.50464 0 7.8125V72.1875C0 76.4954 3.50464 80 7.8125 80H72.1875C76.4954 80 80 76.4954 80 72.1875V7.8125C80 3.50464 76.4954 0 72.1875 0ZM76.875 72.1875C76.875 74.7723 74.7723 76.875 72.1875 76.875H7.8125C5.22766 76.875 3.125 74.7723 3.125 72.1875V7.8125C3.125 5.22766 5.22766 3.125 7.8125 3.125H72.1875C74.7723 3.125 76.875 5.22766 76.875 7.8125V72.1875Z"
@@ -240,8 +264,7 @@
 									<path
 										d="M59.3642 62.2473C53.3627 62.2473 48.8292 60.3137 45.8896 56.5002C44.6453 54.8627 43.7286 52.9817 43.1586 50.902C42.9581 50.1706 43.3886 49.415 44.1201 49.2146C44.8512 49.0143 45.607 49.4447 45.8075 50.1762C46.2842 51.9158 47.0457 53.482 48.0707 54.8311C50.4908 57.9709 54.1869 59.5009 59.3641 59.5009C62.5993 59.5009 65.3082 58.7971 67.4156 57.4091C68.8842 56.442 70.0935 55.1408 71.0101 53.5415H64.9162C64.5418 54.0716 64.115 54.5208 63.6412 54.8821C62.4941 55.7566 61.0856 56.2 59.4549 56.2C57.1273 56.2 55.1507 55.3881 53.5802 53.787C52.0258 52.2033 51.2023 50.0067 51.1333 47.2588C51.1241 46.8887 51.2646 46.5305 51.523 46.2655C51.7815 46.0004 52.136 45.8509 52.5061 45.8509H72.4046C72.3167 40.7189 71.1085 36.8521 68.8063 34.345C66.2954 31.6115 62.9301 30.2827 58.5184 30.2827C54.6206 30.2827 51.4944 31.5542 48.9607 34.17C47.3806 35.8018 46.2832 37.8706 45.6993 40.3185C45.5234 41.0563 44.783 41.5116 44.0448 41.3357C43.307 41.1596 42.8516 40.419 43.0277 39.6812C43.7275 36.7473 45.0599 34.2503 46.9879 32.2593C50.0234 29.1253 53.9029 27.5361 58.5184 27.5361C63.6695 27.5361 67.8113 29.2019 70.8291 32.4873C73.8229 35.7472 75.2761 40.7144 75.1486 47.251C75.134 47.9989 74.5236 48.5975 73.7755 48.5975H54.0043C54.2256 49.9649 54.7335 51.0408 55.5407 51.8633C56.5903 52.9334 57.8706 53.4533 59.455 53.4533C60.4846 53.4533 61.3092 53.2062 61.9758 52.6979C62.3432 52.4177 62.6725 52.0163 62.9546 51.5047C63.1961 51.0667 63.6569 50.7946 64.1571 50.7946H73.1592C73.609 50.7946 74.0304 51.0149 74.287 51.3843C74.5436 51.7537 74.6032 52.2254 74.4463 52.6469C74.1503 53.442 73.799 54.1972 73.4021 54.8913C72.2685 56.8746 70.7625 58.4933 68.9264 59.7025C66.3629 61.3912 63.1457 62.2473 59.3642 62.2473ZM43.805 46.5189C43.0466 46.5189 42.4317 45.904 42.4317 45.1456V45.1222C42.4317 44.3638 43.0466 43.7489 43.805 43.7489C44.5633 43.7489 45.1783 44.3638 45.1783 45.1222V45.1456C45.1783 45.904 44.5633 46.5189 43.805 46.5189ZM65.3461 43.6446H52.6571C51.9035 43.6446 51.2908 43.0374 51.2838 42.2839C51.2603 39.7211 51.9853 37.6372 53.4388 36.0901V36.09C54.9119 34.5223 56.7936 33.7276 59.0319 33.7276C61.1356 33.7276 62.9478 34.4796 64.4182 35.9626C65.8754 37.4333 66.6495 39.5439 66.7192 42.2358C66.7286 42.6061 66.5883 42.9645 66.3298 43.2297C66.0712 43.495 65.7167 43.6446 65.3461 43.6446ZM54.1148 40.898H63.8461C63.636 39.616 63.1743 38.6095 62.4673 37.8961C61.5189 36.9395 60.3949 36.4742 59.0318 36.4742C57.5614 36.4742 56.3865 36.9636 55.4403 37.9707C54.7262 38.7311 54.288 39.6959 54.1148 40.898Z"
 										fill="black" />
-									<path
-										d="M10.6116 51.6043C9.85324 51.6043 9.23828 50.9895 9.23828 50.231V39.0387C9.23828 38.2802 9.85324 37.6654 10.6116 37.6654C11.3699 37.6654 11.9849 38.2802 11.9849 39.0387V50.231C11.9849 50.9895 11.3699 51.6043 10.6116 51.6043Z"
+									<path d="M10.6116 51.6043C9.85324 51.6043 9.23828 50.9895 9.23828 50.231V39.0387C9.23828 38.2802 9.85324 37.6654 10.6116 37.6654C11.3699 37.6654 11.9849 38.2802 11.9849 39.0387V50.231C11.9849 50.9895 11.3699 51.6043 10.6116 51.6043Z"
 										fill="black" />
 									<path
 										d="M10.6116 34.1797C9.85324 34.1797 9.23828 33.5649 9.23828 32.8064V32.7902C9.23828 32.0318 9.85324 31.4169 10.6116 31.4169C11.3699 31.4169 11.9849 32.0318 11.9849 32.7902V32.8064C11.9849 33.5649 11.3699 34.1797 10.6116 34.1797Z"
@@ -254,10 +277,11 @@
 								</defs>
 							</svg>
 						</a>
+					</div>
+					<div class="zoom">
 						<a href="https://github.com/mkhalil44" target="blank">
 							<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path
-									d="M72.1875 1.5625H7.8125C4.36096 1.5625 1.5625 4.36096 1.5625 7.8125V72.1875C1.5625 75.639 4.36096 78.4375 7.8125 78.4375H72.1875C75.639 78.4375 78.4375 75.639 78.4375 72.1875V7.8125C78.4375 4.36096 75.639 1.5625 72.1875 1.5625Z"
+								<path d="M72.1875 1.5625H7.8125C4.36096 1.5625 1.5625 4.36096 1.5625 7.8125V72.1875C1.5625 75.639 4.36096 78.4375 7.8125 78.4375H72.1875C75.639 78.4375 78.4375 75.639 78.4375 72.1875V7.8125C78.4375 4.36096 75.639 1.5625 72.1875 1.5625Z"
 									fill="#709193" />
 								<path
 									d="M40 18.125C53.808 18.125 65 29.317 65 43.125C65 54.4781 57.4329 64.0643 47.0654 67.1124C46.5533 66.5564 46.2549 65.8154 46.25 65V58.7781C46.2549 55.9174 45.1221 55.1624 44.295 53.9001C57.3596 51.9501 57.7704 39.9377 53.208 34.5343C53.1372 34.4531 53.0737 34.2987 53.103 34.2108C53.8031 32.0953 53.7128 27.4359 52.1112 27.5092C49.917 27.6111 48.1671 28.847 46.131 30.058C45.9766 30.1483 45.8533 30.1843 45.6732 30.1361C43.8013 29.6283 41.9092 29.353 40 29.3298C38.0908 29.353 36.1987 29.6283 34.3268 30.1361C34.1467 30.1843 34.0234 30.1483 33.869 30.058C31.8329 28.847 30.083 27.6111 27.8888 27.5092C26.2872 27.4359 26.1969 32.0953 26.897 34.2108C26.9263 34.2987 26.8628 34.4531 26.792 34.5343C22.2296 39.9377 22.6404 51.9501 35.705 53.9001C34.8779 55.1624 33.7451 55.9174 33.75 58.7781V65C33.7451 65.8154 33.4467 66.5564 32.9346 67.1124C22.5671 64.0643 15 54.4781 15 43.125C15 29.317 26.192 18.125 40 18.125Z"
@@ -269,17 +293,17 @@
 								<path
 									d="M72.1875 0H7.8125C3.50464 0 0 3.50464 0 7.8125V72.1875C0 76.4954 3.50464 80 7.8125 80H72.1875C76.4954 80 80 76.4954 80 72.1875V7.8125C80 3.50464 76.4954 0 72.1875 0ZM76.875 72.1875C76.875 74.7723 74.7723 76.875 72.1875 76.875H7.8125C5.22766 76.875 3.125 74.7723 3.125 72.1875V7.8125C3.125 5.22766 5.22766 3.125 7.8125 3.125H72.1875C74.7723 3.125 76.875 5.22766 76.875 7.8125V72.1875Z"
 									fill="black" />
-								<path d="M21.25 9.84375H52.5C53.363 9.84375 54.0625 9.14429 54.0625 8.28125C54.0625 7.41821 53.363 6.71875 52.5 6.71875H21.25C20.387 6.71875 19.6875 7.41821 19.6875 8.28125C19.6875 9.14429 20.387 9.84375 21.25 9.84375Z"
-									fill="black" />
+								<path d="M21.25 9.84375H52.5C53.363 9.84375 54.0625 9.14429 54.0625 8.28125C54.0625 7.41821 53.363 6.71875 52.5 6.71875H21.25C20.387 6.71875 19.6875 7.41821 19.6875 8.28125C19.6875 9.14429 20.387 9.84375 21.25 9.84375Z" fill="black" />
 							</svg>
 						</a>
 					</div>
-				</div>
+					</div>
+					</div>
 			</div>
 			<div>
-				<p>Copyright Marcelle Khalil 2020</p>
+				<p>© Marcelle Khalil-Hein 2020</p>
 			</div>
 		</footer>
-</body>
+	</body>
 
-</html>
+	</html>
