--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				</ul>
 			</nav>
 		</div>
+	</div>
 	</header>
 	<main>
 		<!--hero-->
@@ -1172,12 +1173,12 @@
 				</div>
 				</div>
 				</div>
-			</div>
 		</div>
 		<div>
 			<p>© Marcelle Khalil-Hein 2020</p>
 		</div>
 	</footer>
+	<script src="JS/scripts.js"></script>
 </body>
 
 </html>
