--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="Marcelle Khalil-Hein" content="Marcelle Khalil-Hein">
 	<meta name="Marcelle Khalil-Hein Portfolio Page" content="Marcelle Khalil-Hein's Portfolio - Work and Contact Information">
 	<title>Marcelle Khalil-Hein UX/UI designer Los Angeles, CA</title>
+	<!-- Kit Code -->
+	<script src="https://kit.fontawesome.com/0682d6f787.js" crossorigin="anonymous"></script>
 	<!--CSS Directory-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
@@ -16,6 +18,7 @@
 <body>
 	<header>
 		<div class="container">
+			<div class="navtoggle" id="myNavtoggle">
 			<div class="row">
 				<div class="column col-md-6 col-lg-7">
 			<a href="index.html"><img src="IMG/Logo2.png" alt="Marcelle Khalil" class="logo"></a>
@@ -25,10 +28,12 @@
 					<li><a href="index.html" target="_self">Work</a></li>
 					<li><a href="about.html" target="_self">About</a></li>
 					<li><a href="#contact">Contact</a></li>
+					<li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
 				</ul>
 			</nav>
 		</div>
 	</div>
+</div>
 	</header>
 	<main>
 		<!--hero-->
@@ -1178,6 +1183,7 @@
 			<p>© Marcelle Khalil-Hein 2020</p>
 		</div>
 	</footer>
+<script   src="https://code.jquery.com/jquery-3.5.1.min.js"   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="   crossorigin="anonymous"></script>
 	<script src="JS/scripts.js"></script>
 </body>
 
