--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
 	<meta name="Marcelle Khalil-Hein" content="Marcelle Khalil-Hein">
 	<meta name="Marcelle Khalil-Hein Portfolio Page" content="Marcelle Khalil-Hein's Portfolio - Work and Contact Information">
 	<title>Marcelle Khalil-Hein UX/UI designer Los Angeles, CA</title>
+	<!-- Kit Code -->
+	<script src="https://kit.fontawesome.com/0682d6f787.js" crossorigin="anonymous"></script>
 	<!--CSS Directory-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
@@ -24,7 +26,8 @@
 				<ul class="topbottombordersout">
 					<li><a href="index.html" target="_self">Work</a></li>
 					<li><a href="about.html" target="_self">About</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#contact-anchor" onclick="menuToggle()">Contact</a></li>
+					<li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -208,6 +211,7 @@
 			<p>© Marcelle Khalil-Hein 2020</p>
 		</div>
 	</footer>
+		<script   src="https://code.jquery.com/jquery-3.5.1.min.js"   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="   crossorigin="anonymous"></script>
 	<script src="js/scripts.js"></script>
 </body>
 
