--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<ul class="topbottombordersout">
 					<li><a href="index.html" target="_self">Work</a></li>
 					<li><a href="about.html" target="_self">About</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#contact-anchor" onclick="menuToggle()">Contact</a></li>
 					<li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
 				</ul>
 			</nav>
