--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		</div>
 			<nav class="column col-md-6 col-lg-5">
 				<ul class="topbottombordersout">
-					<li><a href="index.html" target="_self">Work</a></li>
-					<li><a href="about.html" target="_self">About</a></li>
-					<li><a href="#contact-anchor" onclick="menuToggle()">Contact</a></li>
+					<li><a href="index.html">Work</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="#contact">Contact</a></li>
 					<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
 
 				</ul>
@@ -1075,8 +1075,6 @@
 			<p class="center">Want to discuss opportunities? Feel free to get in touch.</p>
 			</div>
 		</div>
-
-<div class="container">
 	<div class="center">
 		<div class="spacer">
 			<a href="mailto:marcellemkhalil@gmail.com" class="button contact">Email Me</a>
