--- a/Pinch.html
+++ b/Pinch.html
@@ -19,6 +19,7 @@
 <body>
 	<header>
 		<div class="container">
+			<div class="navtoggle" id="myNavtoggle">
 			<div class="row">
 				<div class="column col-md-6 col-lg-7">
 			<a href="index.html"><img src="IMG/Logo2.png" alt="Marcelle Khalil" class="logo"></a>
@@ -27,9 +28,11 @@
 				<ul class="topbottombordersout">
 					<li><a href="index.html" target="_self">Work</a></li>
 					<li><a href="about.html" target="_self">About</a></li>
-					<li><a href="#contact-anchor" onclick="menuToggle()">Contact</a></li>
+					<li><a href="#contact">Contact</a></li>
+					<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
 				</ul>
 			</nav>
+		</div>
 		</div>
 	</div>
 	</header>
@@ -198,8 +201,6 @@
 				<p class="center">Want to discuss opportunities? Feel free to get in touch.</p>
 				</div>
 			</div>
-
-	<div class="container">
 		<div class="center">
 			<div class="spacer">
 				<a href="mailto:marcellemkhalil@gmail.com" class="button contact">Email Me</a>
@@ -307,8 +308,8 @@
 				<p>© Marcelle Khalil-Hein 2020</p>
 			</div>
 		</footer>
-		<script   src="https://code.jquery.com/jquery-3.5.1.min.js"   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="   crossorigin="anonymous"></script>
-		<script src="js/scripts.js"></script>
+	<script   src="https://code.jquery.com/jquery-3.5.1.min.js"   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="   crossorigin="anonymous"></script>
+		<script src="JS/scripts.js"></script>
 	</body>
 
 	</html>
