--- a/Pinch.html
+++ b/Pinch.html
@@ -8,7 +8,6 @@
 	<title>Marcelle Khalil-Hein UX/UI designer Los Angeles, CA</title>
 	<!-- Kit Code -->
 	<script src="https://kit.fontawesome.com/0682d6f787.js" crossorigin="anonymous"></script>
-	<li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
 	<!--CSS Directory-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
@@ -26,15 +25,16 @@
 		</div>
 			<nav class="column col-md-6 col-lg-5">
 				<ul class="topbottombordersout">
-					<li><a href="index.html" target="_self">Work</a></li>
-					<li><a href="about.html" target="_self">About</a></li>
+					<li><a href="index.html">Work</a></li>
+					<li><a href="about.html">About</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
+
 				</ul>
 			</nav>
 		</div>
-		</div>
 	</div>
+</div>
 	</header>
 	<main>
 		<br>
