--- a/Saucy.html
+++ b/Saucy.html
@@ -53,17 +53,15 @@
 			<div id="project">
 				<h3 class="center">Introduction</h3>
 				<p>
-					Pinch is a mobile application that helps people take control of their finances. The main goal was to create an applicationthat people from all financial background can easily navigate and use. Everything from account balances to credit
-					scores
-					are all located in one place.
+					Saucy is a responsive recipe application that allows users to add, save, rate, and share different recipes. Users are able to search for recipes by filtering fo ingredients and country of origin.
 				</p>
 			</div>
 			<br>
 			<!--My Process-->
 			<div>
 				<picture>
-					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/pinch_desktop_mockup@600-2.jpg" media="(max-width:767px)">
-					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_desktop_mockup@1200-2.jpg" alt="Pinch Desktop Image">
+					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Saucy_Prototype_Splash@600.jpg" media="(max-width:767px)">
+					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Saucy_Prototype_Splash@1200.jpg" alt="Saucy iPhone Prototype Image">
 				</picture>
 			</div>
 			<br>
@@ -71,25 +69,65 @@
 			<div>
 				<h3 class="center">Research</h3>
 				<p>
-					By conducting extensive research into the potential competitor's of Pinch and performal several user interviews, I was able to better understand the market for money-saving and banking applications. The interview was made up of the
-					following
-					questions:
+					A competitor analysis and other research was conducted by studying a variety of recipe applications and websites. The research included the following:
 				</p>
 				<ul>
-					<li>How old are you?</li>
-					<li>How long have you been using your current money-saving app?</li>
-					<li>Why do you use a money-saving app?</li>
-					<li>What are some features you enjoy about your current money-saving app?</li>
-					<li>What are some features you dislike about your current money-saving app?</li>
-					<li>What features would convince you to switch to a new money-saving app?</li>
+					<li>Competitor overviews</li>
+					<li>Marketing profile</li>
+					<li>SWOT analysis</li>
+					<li>UX Analysis</li>
 				</ul>
-				<p>
-					The interviews revealed that users wanted a simple way to set up financial goals and to take control of their savings.
-				</p>
+				<h4>
+					<b><em>Who</em></b> are you designing for?
+				</h4>
+				<p> Adults who are interested in finding, sharing, and collecting family recipes from all over the world and those who are interested in learning the history behind traditional recipes.</p>
+				<h4>
+					<b><em>What</em></b> kinds of goals will users be accomplishing?
+				</h4>
+				<p>Creating personalized recipes, adding recipes, sharing recipes, rating and reviewing recipes. Recipes are catered to users' needs with quick "how to" videos and the ability to purchase ingredients directly through the application.</p>
+				<h4>
+					<b><em>When</em></b> will users be engaging with the product?
+				</h4>
+				<p>Users will engage with the product when they are getting ready to prepare a meal for friends and family.</p>
+				<h4>
+					<b><em>Where</em></b> will users be using the app?
+				</h4>
+				<p>The users will use the app at home or while shopping in a grocery store.</p>
+				<h4>
+					<b><em>Why</em></b> will users use this app?
+				</h4>
+				<p>Most people living in the United States today have ancestors who originated in a different country. Saving and sharing recipes can be a way to preserve the culture of families who are either new to the US or for people who want to become familiar with their background.</p>
+				<h4>
+					<b><em>How</em></b> will users accomplish their goals?
+				</h4>
+				<p> For users who want to find a new recipe, they will need to choose a country/ geographic location. They will then need to choose from a variety of different ingredients to exclude any recipes that they might be allergic to. Users will be presented with images of different dishes with a dish title, likes, and ratings they can click on to learn more. This will take the user to the recipe page. Another tab will be available if the user wants to learn about the history of the dish. For users who want to add and share their own recipes, they will need to sign into their account to create a page.</p>
+				<h4>
+					<b>Method:</b> User Interview Questions
+				</h4>
+				<ul>
+					<li>What is your name?</li>
+					<li>Where do you live?</li>
+					<li>How might this app be useful to you?</li>
+					<li>How old are you?</li>
+					<li>How often do you cook at home?</li>
+					<li>What do you do for a living?</li>
+					<li>What kind of food did your grow up eating as a kid?</li>
+					<li>Do you still use or have access to the recipes you had as a child?</li>
+				</ul>
+				<h4>
+					<b>Synthesis:</b> Patterns that emerged from the answers
+				</h4>
+				<ul>
+					<li>Many users do not want to spend too much time cooking</li>
+					<li>Many users no longer have access to the recipes they grew up eating</li>
+					<li>Users have health concerns (such as allergies) and need an option to search ingredients</li>
+					<li>Users have difficulty finding certain ingredients at their local grocery stores</li>
+					<li>Users are too tired to cook after work</li>
+					<li>It's hard to make healthy ingredients taste good</li>
 				<br>
 				<picture>
-					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/competitor_analysis_pinch@600.jpg" media="(max-width:767px)">
-					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/competitor_analysis_pinc@1200.jpg" alt="Competitor Analysis Image">
+					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Saucy_SWOT_Analysis@600.jpg" media="(max-width:767px)">
+					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Saucy_SWOT_Analysis@1200.jpg" alt="SWOT Analysis Image">
 				</picture>
 			</div>
 			<br>
@@ -97,34 +135,33 @@
 			<div>
 				<h3 class="center">Ideation</h3>
 				<p>
-					The data collected during the interview process allowed me to create six user stories and user flows which actions a user would take to accomplish a desired task. The user stories were divided into new customers and returning customers.
-					Sucess criteria were created based off of the user stories.
+					User personas were created using all of the information collected from the research and user interviews in order to better understand flows and scenarios.
 				</p>
-				<h4>User Stories:</h4>
-				<ul>
-					<li>"As a new customer, I want all of my account information in one place, so that I can easily track all of my spending." Sucess Criteria 1: Access to all bank accounts</li>
-					<li>"As a new customer, I want to know that my account is safe and secure, so that I don't have to worry about fraud." Success Criteria 2: Advanced security measures</li>
-					<li>"As a new customer, I want access to a free credit score and report in order to monitor my finances." Success Criteria 3: Access to a free credit score and report</li>
-					<li>"As a returning customer, I want notifications that alert me when my bills are due and to keep track of my spending." Success criteria 4: Billing and spending alerts</li>
-					<li>"As a returning customer, I want to be able to review previous conversations from financial advisors." Success Criteria 5: Summary reports from financial advisors</li>
-					<li>"As a returning customer, I want to be able to create and view all of my financial goals." Success Criteria 6: Create and view financial goals</li>
-				</ul>
 				<br>
 				<picture>
-					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/User_Flow_Pinch@600-2.jpg" media="(max-width:767px)">
-					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/User_Flow_Pinch_Desktop-2.jpg" alt="User Flow">
+					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Saucy_Personas@600.jpg" media="(max-width:767px)">
+					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Saucy_Personas_1200.jpg" alt="User Personas Images">
 				</picture>
+				<br>
+				<picture>
+					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Saucy_User_Flow@600-2.jpg" media="(max-width:767px)">
+						<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Saucy_User_Flow@1200-2.jpg" alt="User Flow Image">
 			</div>
 			<br>
 			<!--Wireframe-->
 			<div>
 				<h3 class="center">Wireframe</h3>
 				<p>
-					After the research and ideation phase, I developed low-fidelity wireframes both by hand and using Balsamiq. The wireframes were created with the user stories in mind.
+					After the research and ideation phase, I developed low-fidelity wireframes both by hand and mid-fidelity wireframes using Sketch. The wireframes were created with the user stories in mind. Since Saucy is a responsive application, breakpoints for each type of screen were sketched during wireframing.
 				</p>
 				<picture>
-					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Low-Fidelity-Wireframes@600.jpg" media="(max-width:767px)">
-					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Low-Fidelity-Wireframes@1200.jpg" alt="Balsamiq Image">
+					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/low-fidelity_wireframes_saucy@600.jpg" media="(max-width:767px)">
+					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/low_fidelity_wireframes-@1200-saucy.jpg" alt="Low-Fidelity Wireframe Image">
+				</picture>
+				<br>
+				<picture>
+					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Mid-Fidelity-wireframes-@600-saucy.jpg" media="(max-width:767px)">
+					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Mid_Fidelity-wireframes-@1200-saucy.jpg" alt="Mid-Fidelity Wireframe Image">
 				</picture>
 			</div>
 			<br>
@@ -132,18 +169,12 @@
 			<div>
 				<h3 class="center">Design</h3>
 				<p>
-					Due to the personal and important nature of this application, the design was made to look clean, simple, and professional. One of the emotional design concepts I applied was to refer to the psychology of color and chose a hue that would be
-					most suitable to the app. I chose dark blue because it symbolizes trust, loyalty, and wisdom, all of which are ideal to a money-saving application.
+					My design goal was to create something that would inspire people to cook by envoking warmth and energy. I decided to use bright colors and create playful icons to make the application fun and clean.
 				</p>
 				<br>
 				<picture>
-					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Pinch_UI_Designs@600.jpg" media="(max-width:767px)">
-					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Pinch_UI_Designs@1200.jpg" alt="Pinch Designs Image">
-				</picture>
-				<br>
-				<picture>
-					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/brand_guidelines_pinch@600.jpg" media="(max-width:767px)">
-					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/brand_guidelines_pinch@1200.jpg" alt="Brand Guidelines Image">
+					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/style_guide_saucy@600.jpg" media="(max-width:767px)">
+					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/style_guide_saucy@1200.jpg" alt="Saucy Style Guide Image">
 				</picture>
 			</div>
 
@@ -151,35 +182,23 @@
 			<div>
 				<h3 class="center">Prototype</h3>
 				<p>
-					I created a UseBerry scenario-based test to gain insight into user behaviors, such as click time and heatmap analysis. In addition, I conducted face-to-face tests through InVision Prototype to collect more data on user difficulty in
-					completing the tasks. Users were asked to complete the following tasks in both tests"
+					In addition to the interviews, other individuals participated in usability and preference tests throughout the design process.
 				</p>
-				<ul>
-					<li>Go to the expenses page.</li>
-					<li>Go to the goals page and create a new goal.</li>
-					<li>Check your credit score.</li>
-					<li>Go to the accounts page.</li>
-					<li>Go to the reports page and download a full PDF document.</li>
-				</ul>
+				<h4>
+					Usability Testing
+				</h4>
 				<p>
-					The results showed that users were confused by the buttons on the home screen and didn't know whether to slide or click the buttons. Only 51% of users were able to successfully find the credit score page and some dropped off due to
-					frustration. 100% of users were able to find the expenses page in under 10 seconds, while 80% of the users were able to find the goals page. All of those who did not drop off were able to find the accounts page and download a PDF from the
-					reports page.
+					Testers were asked to go through the filter process in order to create a personalixed home page. They were asked to explain their thoughts as they completed the task.
 				</p>
+				<h4>
+					Preference Testing
+				</h4>
+				<p>
+					Preference tests were used to gather feedback on button types and typography. All preference tests were conducted using UseBerry.
 				<br>
 				<picture>
-					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/graph_image@600.jpg" media="(max-width:767px)">
-					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/graph_pinch2@1200.jpg" alt="U
-				ser Testing Grapg Image">
-				</picture>
-				<br>
-				<picture>
-					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Pinch_results@600.jpg" media="(max-width:767px)">
-					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Pinch_results@1200.jpg" alt="User testing Image">
-				</picture>
-				<picture>
-					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/heatmap_pinch@600.jpg" media="(max-width:767px)">
-					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/heatmap_pinch@1200.jpg" alt="Heatmap ANalysis Image">
+					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Saucy_prototype_iphone@600.jpg" media="(max-width:767px)">
+					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Saucy_iphone_prototype@1200.jpg" alt="Saucy Style Guide Image">
 				</picture>
 			</div>
 			<br>
@@ -187,9 +206,7 @@
 			<div>
 				<h3 class="center">Conclusion</h3>
 				<p>
-					Although the first prototype showed that the majority of the users were able to navigate through the app successfully, it also revealed some problems. Based off of the data received from user testing, I have made a variety of changes to the
-					icons and labels, which I am hoping will solve these issues. I also created an additional screen showing users how to slide the home screen buttons. The next step would be to conduct additional user testing to see if these changes have
-					increased user success rates.
+					The data received from the usability tests showed that users had some difficulty filtering ingredients. The categories and search problems will be updated in order to create a more successful user experience. Overall, users were able to navigate throughout the app smoothly and complete tasks in a matter of seconds. More user testing will be needed in order to identify any usability flaws. Once additional testing has been done, the data collected will be used to fix any remaining issues and design additional screens needed.
 				</p>
 			</div>
 		</main>
